# UiA-Assignments-Software

IKT101-G 23H Grunnleggende Softwareutvikling/assignment_1_1/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_2_1/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_3_1/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_4_1/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_4_2/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_4_3/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_4_4/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_5_1/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_5_2/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_6_1/: CMakeLists.txt  main.c
IKT101-G 23H Grunnleggende Softwareutvikling/assignment_6_2/: CMakeLists.txt  main.c
IKT103-G 24V Videregående Softwareutvikling/assignment_3_1/: CMakeLists.txt  main.cpp  school.sqlite
IKT103-G 24V Videregående Softwareutvikling/assignment_3_1/SQLiteCpp/include/SQLiteCpp/: Assertion.h  Backup.h  Column.h  Database.h  Exception.h  ExecuteMany.h  SQLiteCpp.h  SQLiteCppExport.h  Savepoint.h  Statement.h  Transaction.h  Utils.h  VariadicBind.h
IKT103-G 24V Videregående Softwareutvikling/assignment_3_1/SQLiteCpp/src/: Backup.cpp  Column.cpp  Database.cpp  Exception.cpp
(+91 files in other folders)
